<resources>
    <string name="app_name">Hotel</string>
    <string name="button_text">Нажми</string>
    <string name="button_add">Добавить</string>
    <string name="button_update">Изменить</string>
    <string name="button_delete">Удалить</string>
    <string name="button_find">Найти</string>
    <string name="button_ready">Готово</string>
    <string name="button_close">Закрыть</string>
    <string name="number_room">Номер</string>
    <string name="price_room">Цена</string>
    <string name="capacity_room">Вместимость</string>
    <string name="comfort_room">Класс</string>
    <string name="area_room">Площадь</string>
    <string name="edit_number">Введите номер комнаты</string>
    <string name="button_back">Назад</string>
    <string name="Login">Ваш Логин</string>
    <string name="greetings">Введите ваш логин и пароль</string>
    <string name="Password">Ваш Пароль</string>
    <string name="register">"Если нет аккаунта, зарегистрируйтесь "</string>
    <string name="register_name">Создать аккаунт</string>
    <string name="log_in">Войти</string>
    <string name="new_register">Регистрация</string>
    <string name="username">Ваше имя</string>
    <string name="bookings">Бронирование</string>
    <string name="User">Аккаунт</string>
    <string name="date">Выберите дату въезда и выезда</string>
    <string name="create_booking_btn">Завершить заказ</string>
    <string name="log_out">Выйти</string>
    <string name="select_date">Выбрать время</string>
    <string name="txt_if_user_have_bookings">Ваши активные бронирования</string>
    <string name="txt_if_user_dont_have_bookings">У вас нет активных бронирований</string>
    <string name="edit_id">Введите id брони</string>
    <string name="active_booking">Активные</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="filter">Фильтр</string>
    <string name="closed_bookings">Завершенные</string>
    <string name="check_in">Дата въезда</string>
    <string name="check_out">Дата выезда</string>
    <string name="filter_client">По клиенту</string>
    <string name="input_id_client">Выберите id клиента</string>
    <string name="choice_room">Выберите подходящий номер.</string>
    <string name="update_info">Измените данные бронирования.</string>
    <string name="payment_done">Оплата произведена, благодарим вас за выбор нашего отеля!</string>
    <string name="need_payment">Нажмите на кнопку, чтобы оплатить бронирование</string>
    <string name="pay">Оплатить</string>
    <string name="unpaid_reservations">Вам необходимо оплатить бронирование, чтобы оно было зарегистрировано, если вы его не оплатите, оно исчезнет после выхода из приложения.</string>
    <string name="digits_eng_ru">"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"</string>
</resources>