<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAdd"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_add"
            android:textSize="13sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnUpdate"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_update"
            android:textSize="13sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnFind"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_find"
            android:textSize="13sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btnDel"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete"
            android:textSize="13sp"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableRooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#D5C59E"
        android:backgroundTint="#E7DEC8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </TableLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="190dp"
        android:layout_height="81dp"
        android:layout_marginTop="52dp"
        android:text="@string/button_back"
        android:textSize="34sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRooms" />

</androidx.constraintlayout.widget.ConstraintLayout>