<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFilter"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter"
                android:textSize="16sp"
                app:cornerRadius="0sp" />

            <Button
                android:id="@+id/btnUpdate"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_update"
                android:textSize="16sp"
                app:cornerRadius="0sp" />

            <Button
                android:id="@+id/btnFind"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_find"
                android:textSize="16sp"
                app:cornerRadius="0sp" />

            <Button
                android:id="@+id/btnDel"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_delete"
                android:textSize="16sp"
                app:cornerRadius="0sp" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/admin_bookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="#D5C59E"
            android:backgroundTint="#E7DEC8" />

        <Button
            android:id="@+id/btnBackAdmin"
            android:layout_width="190dp"
            android:layout_height="81dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="52dp"
            android:text="@string/button_back"
            android:textSize="34sp"
            android:visibility="gone"
            app:cornerRadius="30dp" />

    </LinearLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/NavFilter"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/filter" />
</androidx.drawerlayout.widget.DrawerLayout>