<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/bg1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".View.LoginActivity">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="206dp"
            android:layout_height="98dp"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:text="@string/greetings"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="147dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="41dp"
            android:gravity="center"
            android:text="@string/Login"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:background="@android:drawable/edit_text"
            android:id="@+id/EditLogin"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="147dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/Password"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:background="@android:drawable/edit_text"
            android:id="@+id/EditPassword"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/EditLogin" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="133dp"
            android:layout_height="78dp"
            android:layout_marginTop="228dp"
            android:text="@string/log_in"
            android:textSize="24sp"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="244dp"
            android:layout_height="87dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/register"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="154dp"
            android:layout_height="102dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/register_name"
            android:textSize="22sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.057" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>