<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="179dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_txt"
        app:srcCompat="@drawable/money" />

    <TextView
        android:id="@+id/payment_txt"
        android:layout_width="290dp"
        android:layout_height="136dp"
        android:layout_marginTop="28dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/need_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check_payment"
        android:layout_width="321dp"
        android:layout_height="66dp"
        android:layout_marginTop="28dp"
        android:text="@string/pay"
        android:textSize="34sp"
        app:cornerRadius="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="321dp"
        android:layout_height="66dp"
        android:layout_marginTop="116dp"
        android:text="@string/button_back"
        android:textSize="34sp"
        app:cornerRadius="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>