<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:padding="20sp"
    tools:context=".View.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReady"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/button_ready"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/button_close"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/number_room"
                app:autoSizeMaxTextSize="30dp"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="@string/number_room" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price_room"
                app:autoSizeMaxTextSize="30dp"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/price_room" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/capacity_room"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/editCapacity"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="@string/capacity_room" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/comfort_room"
                app:autoSizeMaxTextSize="30dp"
                app:autoSizeTextType="uniform" />

            <Spinner
                android:id="@+id/spClassComfort"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:dropDownWidth="match_parent"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/area_room"
                app:autoSizeMaxTextSize="30dp"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/editArea"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/area_room" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/roomimg"
            tools:srcCompat="@drawable/roomimg" />

    </LinearLayout>

</ScrollView>