<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20px"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@id/btnBooking">

        <TextView
            android:id="@+id/titleBooking"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginTop="30sp"
            android:background="#FFC387"
            android:gravity="center"
            android:text="@string/date"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_selectTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/selected_dates"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:visibility="gone"
            app:autoSizeTextType="uniform" />

        <Spinner
            android:id="@+id/selected_Room"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:visibility="gone" />

        <TableLayout
            android:id="@+id/availableRooms"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/finalPrice"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="TextView"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnBooking"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20px"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="20px"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/create_booking_btn"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnBackBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/button_back"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>